--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
 body {
-    background-color: rgb(241, 241, 241)
+    background-color: seagreen;
 }
 
 h1 {
     opacity: 0.6;
 }
 
-p {
-    width: 150px;
+
+.card {
+    height: 500px;
+    width: 400px;
+    border-radius: 0;
+    margin-top: 30px;
 }
+.headContainer {
+    height: 700;
+    margin: 30px;
+}
+.text-info {
+    opacity: 0.7;
+}
+
+
+
+
 /* add second header!!! */
